@@ -274,56 +274,6 @@
                 <p>So <m>\vect{x}\neq 0</m> is an eigenvector of <m>q(A)</m> for the eigenvalue <m>q(\lambda)</m>.</p>
             </proof>
         </theorem>
-        <example xml:id="example-BDE" acro="BDE">
-            <title>Building desired eigenvalues</title>
-            <idx>
-                <h>eigenvalues</h>
-                <h>building desired</h>
-            </idx>
-            <p>In <xref ref="example-ESMS4" acro="ESMS4"/> the <m>4\times 4</m> symmetric matrix<me>C=
-            \begin{bmatrix}
-            1 &amp;  0 &amp;  1 &amp;  1\\
-            0 &amp;  1 &amp;  1 &amp;  1\\
-            1 &amp;  1 &amp;  1 &amp;  0\\
-            1 &amp;  1 &amp;  0 &amp;  1
-            \end{bmatrix}</me>is shown to have the three eigenvalues <m>\lambda=3,\,1,\,-1</m>.  Suppose we wanted a <m>4\times 4</m> matrix that has the three eigenvalues <m>\lambda=4,\,0,\,-2</m>.  We can employ <xref ref="theorem-EPM" acro="EPM"/> by finding a polynomial that converts <m>3</m> to <m>4</m>, <m>1</m> to <m>0</m>, and <m>-1</m> to <m>-2</m>.  Such a polynomial is called an <term>interpolating polynomial</term>, and in this example we can use<me>r(x)=\frac{1}{4}\left(x^2+4x-5\right)=\frac{1}{4}x^2+x-\frac{5}{4}</me>.</p>
-            <!-- Removed 2013/11/07: or see <acroref type="section" acro="CF" /> -->
-            <p>We will not discuss how to concoct this polynomial, but a text on numerical analysis should provide the details.  For now, simply verify that <m>r(3)=4</m>, <m>r(1)=0</m> and <m>r(-1)=-2</m>.</p>
-            <p>Now compute<md>
-                <mrow>r(C)&amp;=\frac{1}{4}C^2+C-\frac{5}{4}I_4\\
-                &amp;=
-                \frac{1}{4}
-                \begin{bmatrix}
-                3 &amp;  2 &amp;  2 &amp;  2\\
-                2 &amp;  3 &amp;  2 &amp;  2\\
-                2 &amp;  2 &amp;  3 &amp;  2\\
-                2 &amp;  2 &amp;  2 &amp;  3
-                \end{bmatrix}
-                +
-                \begin{bmatrix}
-                1 &amp;  0 &amp;  1 &amp;  1\\
-                0 &amp;  1 &amp;  1 &amp;  1\\
-                1 &amp;  1 &amp;  1 &amp;  0\\
-                1 &amp;  1 &amp;  0 &amp;  1
-                \end{bmatrix}
-                -\frac{5}{4}
-                \begin{bmatrix}
-                1 &amp;  0 &amp;  0 &amp;  0\\
-                0 &amp;  1 &amp;  0 &amp;  0\\
-                0 &amp;  0 &amp;  1 &amp;  0\\
-                0 &amp;  0 &amp;  0 &amp;  1
-                \end{bmatrix}
-                =
-                \frac{1}{2}
-                \begin{bmatrix}
-                1 &amp;  1 &amp;  3 &amp;  3\\
-                1 &amp;  1 &amp;  3 &amp;  3\\
-                3 &amp;  3 &amp;  1 &amp;  1\\
-                3 &amp;  3 &amp;  1 &amp;  1
-                \end{bmatrix}</mrow>
-            </md>.</p>
-            <p><xref ref="theorem-EPM" acro="EPM"/> tells us that if <m>r(x)</m> transforms the eigenvalues in the desired manner, then <m>r(C)</m> will have the desired eigenvalues.  You can check this by computing the eigenvalues of <m>r(C)</m> directly.  Furthermore, notice that the multiplicities are the same, and the eigenspaces of <m>C</m> and <m>r(C)</m> are identical.</p>
-        </example>
         <p>Inverses and transposes also behave predictably with regard to their eigenvalues.</p>
         <theorem xml:id="theorem-EIM" acro="EIM">
             <title>Eigenvalues of the Inverse of a Matrix</title>
@@ -600,6 +550,75 @@
     </reading-questions>
     <exercises xml:id="exercises-PEE">
         <title>Exercises</title>
+
+        <exercise number="M20" xml:id="exercise-PEE-M20">
+            <introduction>
+                <p>This exercise will show we can use a polynomial to convert one matrix into another, with predictable changes in its eigenvalues.  In <xref ref="example-ESMS4" acro="ESMS4"/> the <m>4\times 4</m> symmetric matrix<me>C=
+                \begin{bmatrix}
+                1 &amp;  0 &amp;  1 &amp;  1\\
+                0 &amp;  1 &amp;  1 &amp;  1\\
+                1 &amp;  1 &amp;  1 &amp;  0\\
+                1 &amp;  1 &amp;  0 &amp;  1
+                \end{bmatrix}</me>is shown to have the three eigenvalues <m>\lambda=3,\,1,\,-1</m>. Suppose we wanted a <m>4\times 4</m> matrix that has the three eigenvalues <m>\lambda=4,\,0,\,-2</m>.  We can employ <xref ref="theorem-EPM" acro="EPM"/> by finding a polynomial that converts <m>3</m> to <m>4</m>, <m>1</m> to <m>0</m>, and <m>-1</m> to <m>-2</m>.  Such a polynomial is called an <term>interpolating polynomial</term>, and in this example we can use
+                <me>r(x)=\frac{1}{4}\left(x^2+4x-5\right)=\frac{1}{4}x^2+x-\frac{5}{4}</me>.</p>
+            </introduction>
+            <task>
+                <statement>
+                    <p>Verify that the polynomial <m>r(x)</m> converts the eigenvalues as advertised.</p>
+                </statement>
+                <solution>
+                    <p>We will not discuss how to concoct the interpolating polynomial, <m>r(x)</m>, but a text on numerical analysis should provide the details.  For now, it should be routine to verify that <m>r(3)=4</m>, <m>r(1)=0</m> and <m>r(-1)=-2</m>.</p>
+                </solution>
+            </task>
+            <task>
+                <statement>
+                    <p>In the style of <xref ref="example-PM"/>, compute the matrix <m>r(C)</m>.</p>
+                </statement>
+                <solution>
+                    <p>Now compute<md>
+                        <mrow>r(C)&amp;=\frac{1}{4}C^2+C-\frac{5}{4}I_4\\
+                        &amp;=
+                        \frac{1}{4}
+                        \begin{bmatrix}
+                        3 &amp;  2 &amp;  2 &amp;  2\\
+                        2 &amp;  3 &amp;  2 &amp;  2\\
+                        2 &amp;  2 &amp;  3 &amp;  2\\
+                        2 &amp;  2 &amp;  2 &amp;  3
+                        \end{bmatrix}
+                        +
+                        \begin{bmatrix}
+                        1 &amp;  0 &amp;  1 &amp;  1\\
+                        0 &amp;  1 &amp;  1 &amp;  1\\
+                        1 &amp;  1 &amp;  1 &amp;  0\\
+                        1 &amp;  1 &amp;  0 &amp;  1
+                        \end{bmatrix}
+                        -\frac{5}{4}
+                        \begin{bmatrix}
+                        1 &amp;  0 &amp;  0 &amp;  0\\
+                        0 &amp;  1 &amp;  0 &amp;  0\\
+                        0 &amp;  0 &amp;  1 &amp;  0\\
+                        0 &amp;  0 &amp;  0 &amp;  1
+                        \end{bmatrix}
+                        =
+                        \frac{1}{2}
+                        \begin{bmatrix}
+                        1 &amp;  1 &amp;  3 &amp;  3\\
+                        1 &amp;  1 &amp;  3 &amp;  3\\
+                        3 &amp;  3 &amp;  1 &amp;  1\\
+                        3 &amp;  3 &amp;  1 &amp;  1
+                        \end{bmatrix}</mrow>
+                    </md>.</p>
+                </solution>
+            </task>
+            <task>
+                <statement>
+                    <p>Compute the eigenvalues of <m>r(C)</m> directly and verify that they are as expected.</p>
+                </statement>
+                <solution>
+                    <p>notice that the multiplicities are the same, and the eigenspaces of <m>C</m> and <m>r(C)</m> are identical.</p>
+                </solution>
+            </task>
+        </exercise>
         <exercise number="T10" xml:id="exercise-PEE-T10">
             <statement>
                 <p>Suppose that <m>A</m> is a square matrix.  Prove that the constant term of the characteristic polynomial of <m>A</m> is equal to the determinant of <m>A</m>.</p>
