@@ -40,6 +40,8 @@ Move Theorem ITMT about inverses of triangular matrices
 from Section OD to Section MINM, and improve the proof.
 New exercises: MO.M10, MO.T25, MM.T28, MINM.T50
 
+* Convert superfluous Example BDE to Exercise PEE.M20.
+
 v X.XX
 ~~~~~~~~~~~~~~~~
 New: Exercise PEE.T21, eigenvalue proof two ways
@@ -102,6 +104,7 @@ Change: Locate Theorem PTMT in Section MM
 Change: Locate Theorem ITMT in Section MINM
 Change: Reorganize proof of Theorem EDELI using induction
 Change: Rename Theorem ZPZT as Theorem ZPZF
+Change: Example BDE becomes Exercise PEE.M20
 Sage: doctesting, version 9.2
 Typo: Exercise SSLE.C53, add second condition to quoted problem (Jaime Ruiz)
 Typo: Theorem PSPHS, stray addition sign in the proof (Rachel Chaiser)
